app-deployments/app1/frontend/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-app1
  namespace: app1
spec:
  stripPrefix:
    prefixes:
      - /app1
