app-deployments/app1/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-frontend-svc
  namespace: app1
spec:
  selector:
    app: app1-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
